src/css/footer.css
.modal{
    display: none;
    position: fixed;
    z-index: 90;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    backdrop-filter: blur(8px);
}
.modal-content-footer {
    background-color: var(--white-bg);
    margin: 1% auto; 
    padding: 20px;
    border: 1px solid #888;
    width: 80%; 
    max-width: 800px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
    border-radius: 10px;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.modal-content-footer.dark-mode {
    background-color: var(--text-color);
    box-shadow: 0 5px 15px rgb(0, 0, 0);
}

.footer-list-item-links.dark-mode  {
    color: var(--white-bg);

}
.footer{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.footer-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 32px;
    width: 800px;
}

.footer-list{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 16px;
    list-style: none;
}
.footer-list-item{
    padding: 10px;
    width: 240px;
    gap: 16px;
    display: flex;
    flex-direction: column;
    width: 224px;
border-radius: 15px;
box-shadow: 0 5px 15px rgba(0,0,0,0.3);
border: 1px solid #888;



}
.footer-list-item-info{
    display: flex;
    flex-direction: column;
    gap: 16px;
    padding-left:10px;
}

.footer-list-item-text{
    text-decoration: none;
    font-size: 16px;
    font-weight: 500;
    line-height: 20px;
}
.footer-list-item-link{
    text-decoration: none;
    font-size: 10px;
    font-weight: 500;
    line-height: 20px;
    color: black;
}
.footer-list-item-img-container{
  overflow: hidden;
}
.footer-list-item-img{
border-radius: 15px;
width: 100%;
height: 100%;
object-fit: cover;
}


.footer-text{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    padding-top: 0px;
    gap: 10px;
}

.footer-text-p.dark-mode{
    color: var(--text-color)
}

#openModalBtn{
    cursor: pointer;
}
#closeModalBtn{
    cursor: pointer;
}

.modal-menu-button-icon{
    z-index: 100;
    fill: var(--color1);
    cursor: pointer;
}

.footer-list-item-link{
    display: flex;
    align-items: center;
    gap:10px;
}

